welcome.lessons.welcome.bat.bool1.NearHundred.scala.error
nearHundred:8: error: ';' expected but 'else' found.
	else if (c<=10) {
        ^