welcome.lessons.welcome.bat.bool1.NearHundred.scala.code
def nearHundred(n:Int): Boolean = {
	var c=0;
	c=200-n;
	if (c<=10) {
		return true;
	}
	c=100-n;
	else if (c<=10) {
		return true;
	}
	else return false;
}
